--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,12 @@ on:
     branches: [main]
   
   # schedule:
-  #     - cron: '0 0 * * *'
+      # - cron: '0 0 * * *'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    # runs-on: self-hosted
 
     permissions:
       contents: write
