--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,11 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
+          # cache: 'pip'
+      
+      # - name: Install pip
+      #   run: pip install - requirements.txt
 
       - name: Run script
         run: python ./fecha_hora/fecha.py
