--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,10 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-          # cache: 'pip'
+          python-version: '3.x'
+          cache: 'pip'
+        env:
+          AGENT_TOOLSDIRECTORY: /opt/hostedtoolache
       
       # - name: Install pip
       #   run: pip install - requirements.txt
