--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.11.2'
           architecture: "x64"
         env:
           AGENT_TOOLSDIRECTORY: /opt/hostedtoolache
