--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           python-version: '3.x'
           architecture: "x64"
+
         # env:
         #   AGENT_TOOLSDIRECTORY: /opt/hostedtoolache
       
@@ -32,6 +33,8 @@ jobs:
 
       - name: Run script
         run: python ./fecha_hora/fecha.py
+        env:
+          CLAVE_PRIVADA: ${{ secrets.CLAVE_PRIVADA }}
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
