--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
         # env:
         #   AGENT_TOOLSDIRECTORY: /opt/hostedtoolache
       
-      # - name: Install pip
-      #   run: pip install - requirements.txt
+      - name: Install pip
+        run: pip install - requirements.txt
 
       - name: Run script
         run: python ./fecha_hora/fecha.py
