--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         #   AGENT_TOOLSDIRECTORY: /opt/hostedtoolache
       
       - name: Install pip
-        run: pip install - requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run script
         run: python ./fecha_hora/fecha.py
