--- a/.github/workflows/contextos.yml
+++ b/.github/workflows/contextos.yml
@@ -34,5 +34,5 @@ jobs:
           echo "${{runner.tool_cache}}"
           echo "${{env.var1}}"
           echo "${{secrets.AGENTE}}"
-          echo "${{secrets.CLAVE PRIVADA}}"
+          echo "${{secrets.CLAVE_PRIVADA}}"
           
