--- a/.github/workflows/comentario.yml
+++ b/.github/workflows/comentario.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   comentario:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout code
