--- a/.github/workflows/mostrar_metricas.yml
+++ b/.github/workflows/mostrar_metricas.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configurar CML
-        uses: interactive/setup-cml@v1
+        uses: interative/setup-cml@v1
         with: 
           token: ${{ secrets.GITHUB_TOKEN }}
 
