--- a/.github/workflows/mostrar_metricas.yml
+++ b/.github/workflows/mostrar_metricas.yml
@@ -32,4 +32,7 @@ jobs:
         run: |
           cat results.txt >> report.md
           echo "![training graph](./graph.png)" >> report.md
-          cml comment create report.md      
+          cml comment create report.md     
+        env:
+          REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
