--- a/.github/workflows/mostrar_metricas_2.yaml
+++ b/.github/workflows/mostrar_metricas_2.yaml
@@ -9,7 +9,8 @@ jobs:
   metricas_v2:
     runs-on: ubuntu-latest
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
-
+    permissions:
+      contents: write
     steps:
       - name: Verificar
         uses: actions/checkout@v3
